fixed .card h2 color contrast.

--- a/styles/base.css
+++ b/styles/base.css
@@ -130,7 +130,7 @@ h1 {
 .card h2 {
   background-color: var(--secondary-color);
   padding: 1rem;
-  color: var(--primary-color);
+  color: var(--white);
   font-size: 1rem;
 }
 
